# StereoVision

./: README.md  cameras.md
docs/: cameras.md
docs/cameras/: cameras.tex
docs/fundamental/: fundamental.tex
docs/fundamental/drawio/: t.xml
docs/manifolds/: manifolds.tex
docs/photorpn/: photorpn.tex
docs/rp2/: rp2.tex
docs/rp3/: rp3.tex
docs/rpn/: rpn.tex
src/: main.cpp
src/common/: CMakeLists.txt
src/common/exceptions/: index_overflow_exception.h  singular_matrix_exception.h
src/common/linalg/: CMakeLists.txt  matrix.h  row.h  tensor.h  tensor_indices.cpp  tensor_indices.h
src/common/linalg/inidices/: iindex.cpp  iindex.h  minor_index.cpp  minor_index.h  mul_index_pair.cpp  mul_index_pair.h  simple_index.cpp  simple_index.h  sum_index_pair.cpp  sum_index_pair.h
